include/mcc152.h


int mcc152_open(uint8_t address);
int mcc152_close(uint8_t address);
int mcc152_serial(uint8_t address, char* buffer);
int mcc152_a_out_write(uint8_t address, uint8_t channel, uint32_t options, double value);
int mcc152_a_out_write_all(uint8_t address, uint32_t options, double* values);
int mcc152_dio_reset(uint8_t address);
int mcc152_dio_input_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_output_write(uint8_t address, uint8_t channel, uint8_t value);
int mcc152_dio_output_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_direction_write(uint8_t address, uint8_t channel, uint8_t value);
int mcc152_dio_direction_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_pull_config_write(uint8_t address, uint8_t channel, uint8_t value);
int mcc152_dio_pull_config_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_pull_enable_write(uint8_t address, uint8_t channel, uint8_t value);
int mcc152_dio_pull_enable_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_input_invert_write(uint8_t address, uint8_t channel, uint8_t value);
int mcc152_dio_input_invert_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_input_latch_write(uint8_t address, uint8_t channel, uint8_t value);
int mcc152_dio_input_latch_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_output_type_write(uint8_t address, uint8_t value);
int mcc152_dio_output_type_read(uint8_t address, uint8_t* value);
int mcc152_dio_interrupt_mask_write(uint8_t address, uint8_t channel, uint8_t value);
int mcc152_dio_interrupt_mask_read(uint8_t address, uint8_t channel, uint8_t* value);
int mcc152_dio_interrupt_status_read(uint8_t address, uint8_t channel, uint8_t* value);